Fixed: Off-center HR on mobile view

--- a/site-sass/site-specific/site.page.scss
+++ b/site-sass/site-specific/site.page.scss
@@ -18,3 +18,13 @@
 	text-align: center;
 	color: $headerbg-grey;
 }
+
+
+@include mq($until: tablet) {
+
+	.main-container hr {
+		margin-left: 38.5%;
+		margin-right: 38.5%;
+	}
+
+}
